Fixed up longer footer text on mobile.

--- a/FrontEnd/styles/header_footer.scss
+++ b/FrontEnd/styles/header_footer.scss
@@ -116,8 +116,16 @@ footer {
     }
   }
 
-  small a {
-    font-size: 12px;
+  small {
+    text-align: center;
+
+    @media screen and (max-width: $mobile-breakpoint) {
+      margin-top: 10px;
+    }
+
+    a {
+      font-size: 12px;
+    }
   }
 
   ul {
